<resources>
    <string name="app_name">Ads</string>
    <string name="install">Install</string>
    <string name="loading">Loading</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_to_exit">Are you sure you want to exit app</string>
    <string name="title">Title</string>
    <string name="des1">This is Description</string>
    <string name="txt_onboard1">View Status</string>
    <string name="txt_desc_onBoard1">Open Whatsapp and View  Friends Statuses</string>
    <string name="txt_onboard2">Download and Share</string>
    <string name="txt_onboard3">All In One</string>
    <string name="txt_desc_onBoard2">Open Status Saver app to download and share  Friends Statuses</string>
    <string name="txt_desc_onBoard3">Status Saver, Chat Locker, Direct Message and Web Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thanks_for_using_birthday">Thanks for using Birthday</string>
    <string name="dsfsf">We really appreciate you taking the time to rate us.</string>
    <string name="rate_us">Rate Us</string>
    <string name="exit">Exit</string>
    <string name="feedback">Feedback</string>
    <string name="the_best_we_could_have">The best we could have</string>
    <string name="english">English</string>
    <string name="todo">ToDo</string>
    <string name="rate_your_experince">Rate Your Experience</string>
    <string name="ratedesc">Take a minute to rate this app and help us to improve more features.</string>
    <string name="very_bad">Very Bad</string>
    <string name="excellent">Excellent</string>
    <string name="later">Later</string>
</resources>